--- a/src/Pages/WizardLanding/WizardLanding.module.css
+++ b/src/Pages/WizardLanding/WizardLanding.module.css
@@ -14,6 +14,15 @@
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
   color: #2c7a7b;
+  margin: 1rem;
+}
+
+.fv_tagline
+{
+  margin: 1rem;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  max-width: 30rem;
 }
 
 .instruction_box {
